--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,14 +1,14 @@
 <article class="">
   <div class="">
     <a href="{{post.content}}" target="_blank">{{post.title}}</a>
-    {{!-- <span>({{post.post_url}})</span> --}}
+    <span>({{post.content}})</span>
   </div>
-  {{!-- <div class="">
-    {{post.vote_count}} point(s) by {{post.user.username}} on 
+  <div class="">
+    {{!-- {{post.vote_count}} point(s) by {{post.user.username}} on 
     {{post.created_at}} 
-    |
+    | --}}
     <a href="/post/{{post.id}}">{{post.comments.length}} comment(s)</a>
-  </div> --}}
+  </div>
 </article>
 
 <form class="comment-form">
